--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-   <h1>233</h1>
+<div id="app" v-text="msg">
+
+</div>
+<script src="lib/vue.js"></script>
+<script>
+    const vm = new Vue({
+        el:'#app',
+        data:{
+            msg:'hello vue!'
+        },
+        methods:{
+
+        }
+    })
+
+</script>
 </body>
 </html>
