--- a/component.html
+++ b/component.html
@@ -5,44 +5,45 @@
     <title>组件</title>
     <style>
         .v-enter,
-        .v-leave-to{
+        .v-leave-to {
             opacity: 0;
             transform: translateX(150px);
         }
+
         .v-enter-active,
-        .v-leave-active{
+        .v-leave-active {
             transition: all 0.6s ease;
         }
     </style>
 </head>
 <body>
-   <div id="app">
-       <a href="" @click.prevent="comName='login'">登录</a>
-       <a href="" @click.prevent="comName='register'">注册</a>
-<!--       component 占位符 :is属性后跟组件名字式---->
-<!--       组件切换动画模式 >
-       <transition mode="out-in">
-           <component :is="comName"></component>
-       </transition>
+<div id="app">
+    <a href="" @click.prevent="comName='login'">登录</a>
+    <a href="" @click.prevent="comName='register'">注册</a>
+    <!--&lt;!&ndash;       component 占位符 :is属性后跟组件名字式&#45;&#45;&ndash;&gt;-->
+    <!--&lt;!&ndash;       组件切换动画模式 >-->
+    <transition mode="out-in">
+        <component :is="comName"></component>
+    </transition>
 
-   </div>
+</div>
 </body>
 <script src="lib/vue.js"></script>
 <script>
 
-    Vue.component('login',{
-       template:'<h3>登陆组件</h3>'
+    Vue.component('login', {
+        template: '<h3>登陆组件</h3>'
     });
-    Vue.component('register',{
+    Vue.component('register', {
         template: '<h3>注册组件</h3>'
     })
 
     var vm = new Vue({
-        el:'#app',
-        data:{
-           comName:'login'
+        el: '#app',
+        data: {
+            comName: 'login'
         },
-        methods:{}
+        methods: {},
     })
 </script>
 </html>
