--- a/form.html
+++ b/form.html
@@ -30,6 +30,7 @@
 
     //自定义指令
     Vue.directive('focus', {
+        // 当被绑定的元素插入到 DOM 中时……
         inserted: function (el) {
             el.focus()
 
