--- a/filter.html
+++ b/filter.html
@@ -8,20 +8,20 @@
             background: hotpink;
             transition: all 0.6s ease;
         }
-        .v-enter,
-        .v-leave-to{
+        .my-enter,
+        .my-leave-to{
             opacity: 0;
             transform: translateY(80px);
         }
-        .v-enter-active,
-        .v-leave-active{
+        .my-enter-active,
+        .my-leave-active{
             transition: all 0.6s ease;
         }
 
-        .v-move{
+        .my-move{
             transition: all 0.6s ease;
         }
-        .v-leave-active{
+        .my-leave-active{
             position: absolute;
         }
 
@@ -41,7 +41,7 @@
          <th>ID</th>
          <th>Name</th>
 <!--         表格过渡动画-->
-         <tbody is="transition-group" appear>
+         <tbody is="transition-group" appear name="my">
              <tr v-for="(item,i) in search(keywords)" :key="item.id" @click="del(i)">
                  <td>{{item.id}}</td>
                  <td>{{item.name}}</td>
