--- a/thirdAnimate.html
+++ b/thirdAnimate.html
@@ -9,7 +9,7 @@
 <div id="app">
     <input type="button" value="toggle" @click="flag=!flag">
     <transition
-        enter-active-class = "bounceIn";
+        enter-active-class = "bounceIn"
         leave-active-class = "bounceOut"
         :duration = "{enter:200,leave:400}">
         <h3 v-if="flag" class="animated">this is h3</h3>
