--- a/ballMove.html
+++ b/ballMove.html
@@ -19,7 +19,7 @@
           @before-enter="beforeEnter"
           @enter="enter"
           @after-enter="afterEnter">
-           <div class="ball" v-if="flag"></div>
+           <div class="ball" v-show="flag"></div>
        </transition>
 
    </div>
