--- a/parrenComp.html
+++ b/parrenComp.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="app">
-    <mycom v-bind:parentmsg="msg"></mycom>
+    <mycom :parentmsg="msg"></mycom>
 </div>
 </body>
 <script src="lib/vue.js"></script>
