--- a/component.html
+++ b/component.html
@@ -21,7 +21,7 @@
     <a href="" @click.prevent="comName='login'">登录</a>
     <a href="" @click.prevent="comName='register'">注册</a>
     <!--&lt;!&ndash;       component 占位符 :is属性后跟组件名字式&#45;&#45;&ndash;&gt;-->
-    <!--&lt;!&ndash;       组件切换动画模式 >-->
+    <!--&lt;!&ndash;    mode   组件切换动画模式 >-->
     <transition mode="out-in">
         <component :is="comName"></component>
     </transition>
