--- a/routemac.html
+++ b/routemac.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>vue-router</title>
+    <title>route</title>
     <style>
         .router-link-active {
-            font-size: 30px;
             color: red;
+            font-size: 20px;
             font-weight: bold;
             font-style: italic;
         }
@@ -14,12 +14,12 @@
         .v-enter,
         .v-leave-to {
             opacity: 0;
-            transform: translateX(10px);
+            transform: translateX(20px);
         }
 
         .v-enter-active,
         .v-leave-active {
-            transition: all 0.5s ease;
+            transition: all 0.6s ease;
         }
     </style>
 </head>
@@ -27,37 +27,41 @@
 <div id="app">
     <router-link to="/login?id=10">登录</router-link>
     <router-link to="/register">注册</router-link>
+    <!--       路由动画-->
     <transition mode="out-in">
         <router-view></router-view>
     </transition>
-</div>
 
+</div>
 </body>
 <script src="lib/vue.js"></script>
 <script src="lib/vue-router.js"></script>
 <script>
+    //定义组件
     var login = {
-        template: '<h3>登录id为:{{this.$route.query.id}}</h3>',
+        template: '<h3>登录:{{this.$route.query.id}}</h3>',
         created() {
             console.log(this.$route.query.id);
         },
         data() {
             return {
-                msg: 'know'
+                msg: 'info'
             }
-        },
-    };
+        }
+    }
     var register = {
         template: '<h3>注册</h3>'
-    };
-    //定义路由对象
+    }
+
+    // 路由实例
     var routerObj = new VueRouter({
         routes: [
             {path: '/login', component: login},
-            {path: '/register', component: register},
-        ],
-        routeActiveClass: ''//自定义高亮显示类名
-    });
+            {path: '/register', component: register}
+        ]
+    })
+
+
     var vm = new Vue({
         el: '#app',
         data: {},
